# warebots

./: .gitignore  CMakeLists.txt  README.md  package.xml  urdf.rviz
config/: arm_config.yaml  controllers_config.yaml  gantry_config.yaml  joint_names_gantry_assembly_v2.yaml  warebot_config.yaml
include/: gantry_assembly_v2.h
launch/: display.launch  gazebo.launch  test_attacher.launch  warehouse.launch
meshes_warebot/: FL_l_tube.STL  FL_wheel.STL  FR_l_tube.STL  FR_wheel.STL  RL_l_tube.STL  RL_wheel.STL  RR_l_tube.STL  RR_wheel.STL  chassis.STL
src/: arm_teleop.py  attach.py  gantry_assembly_v2.cpp  gantry_teleop.py  old_gantry_teleop.py  pipeline.py  second_gantry_teleop.py  teleop_template.py  warebot_teleop.py
urdf/: gantry_assembly_v2.csv  gantry_assembly_v2.urdf  new_urdf.urdf  tu_nguyen.urdf  warebot_v3.urdf
worlds/: final_world.world  test_attacher.world  ware_world.world  warehouse_world.world
